发布4.1.1：完善易用接口并修复条件、字段治理与结构迁移边界