@@ -30,6 +30,37 @@ import static org.junit.jupiter.api.Assertions.assertTrue;
 class JdbcProtectedOwnerBatchPlanTest {
 
     @Test
+    void rendersInternalSlotsAsPortableIntegersAndBindsOnlyOwnerValues() {
+        List<ProtectedBatchRows.RowView> rows = List.of(
+                row(updateWork("select id from business_row where id = ?", List.of(11L))),
+                row(updateWork("select id from business_row where id = ?", List.of(22L))));
+
+        ProtectedOwnerBatchPlan plan = ProtectedOwnerBatchPlan.plans(
+                rows, Long.MAX_VALUE).iterator().next();
+
+        assertEquals("select flying_owner_0.*, 0 as flying_orm_owner_slot"
+                + " from (select id from business_row where id = ?) flying_owner_0"
+                + " union all select flying_owner_1.*, 1 as flying_orm_owner_slot"
+                + " from (select id from business_row where id = ?) flying_owner_1", plan.sql());
+        assertEquals(List.of(11L, 22L), plan.parameters());
+    }
+
+    @Test
+    void wideOwnerQueriesUseIndividualPlansAndStillHonorTheByteBudget() {
+        int count = ProtectedOwnerBatchPlan.MAX_PARAMETERS + 1;
+        ProtectedWriteWork work = updateWork("select id from business_row where id in ("
+                + String.join(",", java.util.Collections.nCopies(count, "?")) + ")",
+                java.util.Collections.nCopies(count, 1L));
+        var rows = List.of(row(work), row(work));
+        var plans = StreamSupport.stream(
+                ProtectedOwnerBatchPlan.plans(rows, Long.MAX_VALUE).spliterator(), false).toList();
+        assertEquals(List.of(1, 1), plans.stream().map(ProtectedOwnerBatchPlan::size).toList());
+        assertEquals(count, plans.getFirst().parameters().size());
+        assertThrows(IllegalArgumentException.class,
+                () -> ProtectedOwnerBatchPlan.plans(rows, 1L).iterator().next());
+    }
+
+    @Test
     void reusesOwnerQueryParametersAlreadyOwnedByTheRequest() {
         AtomicInteger copies = new AtomicInteger();
         ProtectedWriteWork work = updateWork(
@@ -85,6 +116,10 @@ class JdbcProtectedOwnerBatchPlanTest {
 
         assertEquals(List.of(ProtectedOwnerBatchPlan.MAX_ROWS, 1),
                      plans.stream().map(ProtectedOwnerBatchPlan::size).toList());
+        assertTrue(plans.getFirst().sql().contains(
+                ", " + (ProtectedOwnerBatchPlan.MAX_ROWS - 1) + " as flying_orm_owner_slot"));
+        assertTrue(plans.getLast().sql().contains(", 0 as flying_orm_owner_slot"));
+        assertEquals(List.of((long) ProtectedOwnerBatchPlan.MAX_ROWS), plans.getLast().parameters());
     }
 
     @Test
@@ -92,8 +127,8 @@ class JdbcProtectedOwnerBatchPlanTest {
         List<ProtectedBatchRows.RowView> parameterRows = new ArrayList<>();
         for (int index = 0; index < 401; index++) {
             parameterRows.add(row(updateWork(
-                    "select id from business_row where id = ? or id = ? or id = ? or id = ?",
-                    List.of(1L, 2L, 3L, 4L))));
+                    "select id from business_row where id = ? or id = ? or id = ? or id = ? or id = ?",
+                    List.of(1L, 2L, 3L, 4L, 5L))));
         }
         List<ProtectedOwnerBatchPlan> parameterPlans = StreamSupport.stream(
                 ProtectedOwnerBatchPlan.plans(parameterRows, Long.MAX_VALUE).spliterator(), false).toList();
@@ -149,9 +184,8 @@ class JdbcProtectedOwnerBatchPlanTest {
         ProtectedOwnerBatchPlan plan = ProtectedOwnerBatchPlan.plans(
                 List.of(row(work)), Long.MAX_VALUE).iterator().next();
 
-        assertEquals(2, plan.parameters().size());
-        assertEquals(0, plan.parameters().get(0));
-        assertEquals(null, plan.parameters().get(1));
+        assertEquals(1, plan.parameters().size());
+        assertEquals(null, plan.parameters().getFirst());
     }
 
     private static Connection connectionWithOwners() throws SQLException {
